# flext-web

./: .dev_deps_backup_20250706  .env.example  .envrc  .gitignore  .mise.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CLAUDE.md.INCORRECT.bak2  Dockerfile  Dockerfile.simple  FLEXT_CORE_MIGRATION_APPLIED.md  IMPLEMENTATION_STATUS.md  LICENSE  LOGGING_MIGRATION.md  Makefile  Makefile.build  README.md  README_20250723_193800.bak2  README_old.md  REFACTORING_PLAN.md  TODO.md  base.mk  base.mk.bak  conftest.py  custom.mk  custom.mk.rej  development.md  docker-compose.yml  docker_flext_core_mock.py  getting-started.md  index.md  manage.py  mkdocs.yml  pyproject.toml  pyright_report.json  pyrightconfig.json  requirements.txt  run_web_interface.py  test_debug.py  (+6 more)
.flext-deps/: flext-cli  flext-core
.github/: dependabot.yml
.github/workflows/: ci.yml
.qlty/: qlty.toml
.scope/: config.toml
.serena/: project.yml
.serena/memories/: flext_pydantic_standardization_complete.md
api-reference/: README.md
architecture/: patterns.md
configuration/: README.md
development/: README.md
docs/: CHANGELOG.md  README.md  TODO.md  api-reference.md  architecture.md  configuration.md  development.md  getting-started.md  index.md  python-module-organization.md  testing.md  troubleshooting.md
docs/api/: README.md
docs/api-reference/: README.md
docs/architecture/: README.md  patterns.md
docs/configuration/: README.md
docs/contributing/: README.md
docs/development/: README.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  security.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/pydantic-v2-modernization/: audit_pydantic_v2.py
docs/releases/: latest.md
docs/roadmap/: index.md
examples/: 01_basic_service.py  02_api_usage.py  03_docker_ready.py  README.md  __init__.py  api_usage.py  api_usage.pyi  basic_service.py  basic_service.pyi  docker_ready.py  docker_ready.pyi
guides/: README.md  configuration.md  development.md  getting-started.md  security.md  testing.md  troubleshooting.md
scripts/: README.md  __init__.py  manage.py  mode.py  sync.py  workspace_orchestrator.py
scripts/check/: __init__.py  workspace_check.py
scripts/core/: __init__.py  check_base_mk_sync.py  generate_scripts_inventory.py  pytest_diag_extract.py  skill_validate.py  stub_supply_chain.py  text_pattern_scanner.py
scripts/dependencies/: __init__.py  dependency_detection.py  dependency_limits.toml  detect_runtime_dev_deps.py  modernize_pyproject.py  sync_extra_paths_from_deps.py  sync_internal_deps.py
scripts/documentation/: __init__.py  _shared.py  audit.py  build.py  fix.py  generate.py  readme_standardizer.py  shared.py  workspace_run.py
scripts/github/: __init__.py  lint_workflows.py  pr_manager.py  pr_workspace.py  sync_workflows.py
scripts/libs/: __init__.py  config.py  discovery.py  doc_patterns.py  git.py  json_io.py  paths.py  patterns.py  reporting.py  selection.py  subprocess.py  templates.py  toml_io.py  versioning.py
scripts/maintenance/: _discover.py  enforce_python_version.py
scripts/release/: __init__.py  build.py  changelog.py  notes.py  run.py  shared.py  version.py
src/: README.md
src/flext_web/: README.md  __init__.py  __init__.pyi  __main__.py  __version__.py  _config.py  _exports.py  _exports_lazy_part_01.py  _models.py  _settings.py  api.py  app.py  base.py  config.py  constants.py  exceptions.py  fields.py  flext_integration.py  handlers.py  interfaces.py  legacy.py  main.py  manage.py  models.py  platform.py  protocols.py  services.py  settings.py  simple_api.py  simple_web.py  type_aliases.py  typings.py  utilities.py  version.py  web_config.py  web_exceptions.py  web_interface.py  web_models.py  web_service.py
src/flext_web/_models/: __init__.py  _auth.py  (+9 more)
src/flx_web/: README.md  __init__.py  __version__.py  main.py  manage.py
tests/: README.md  __init__.py  base.py  conftest.py  conftest_docker.py  conftest_project.py  constants.py  models.py  port_manager.py  protocols.py  settings.py  test_cli_lines_precise.py  test_config_comprehensive.py  test_coverage_missing_lines.py  test_critical_coverage.py  test_critical_missing_lines.py  test_dashboard_views_coverage.py  test_domain_entities.py  test_edge_cases_real.py  test_examples_deep_validation.py  test_examples_simple.py  test_exceptions_comprehensive.py  test_fields_comprehensive.py  test_final_8_lines_surgical.py  test_flext_web.py  test_handlers_comprehensive.py  test_legacy_comprehensive.py  test_line_872_precise.py  test_line_903_precise.py  test_main.py  test_main_entry.py  test_main_entry_real.py  test_missing_coverage.py  test_models.py  test_models_extended.py  test_real_functionality_comprehensive.py  test_real_service_integration.py  test_remaining_6_percent_critical.py  test_service_advanced.py  test_simple_api.py  (+5 more)
tests/e2e/: __init__.py
tests/fixtures/: __init__.py  auth.py
tests/helpers/: __init__.py  constants.py  models.py  protocols.py  typings.py  utilities.py
tests/integration/: __init__.py  test_docker_container.py  test_docker_stress.py  test_examples.py  test_examples_full_functionality.py
tests/unit/: __init__.py  test___init__.py  test___main__.py  test_api.py  test_app.py  test_app_service.py  test_auth_service.py  test_cli_lines_precise.py  test_config.py  test_config_comprehensive.py  test_config_coverage.py  test_config_coverage_complete.py  test_config_functional.py  test_config_missing_coverage.py  test_constants.py  test_domain_entities.py  test_edge.py  test_edge_cases_real.py  test_entities_service.py  test_entry.py  test_examples.py  test_examples_deep_validation.py  test_examples_validation.py  test_exceptions.py  test_exceptions_comprehensive.py  test_factory.py  test_fields.py  test_fields_comprehensive.py  test_handlers.py  test_handlers_comprehensive.py  test_handlers_direct.py  test_health.py  test_legacy_comprehensive.py  test_line_872_precise.py  test_line_903_precise.py  test_main_entry_real.py  test_missing.py  test_missing_coverage.py  test_missing_coverage_models.py  test_models.py  (+30 more)
(+146 files in other folders)
